--- a/public/about.html
+++ b/public/about.html
@@ -39,12 +39,14 @@
 			background-image:url(https://source.unsplash.com/category/nature);
 		}
 		.scene.two {
-			background-image:url(https://source.unsplash.com/category/food);
+			background-image:url(https://source.unsplash.com/category/buildings);
 		}
 		.scene.three {
 			background-image:url(https://source.unsplash.com/category/food);
 		}
-
+		.scene.four {
+			background-image:url(https://source.unsplash.com/category/technology);
+		}
 	</style>
 </head>
 <body>
