--- a/public/about.html
+++ b/public/about.html
@@ -47,6 +47,9 @@
 		.scene.four {
 			background-image:url(https://source.unsplash.com/category/technology);
 		}
+		.scene.five {
+			background-image:url(https://source.unsplash.com/category/people);
+		}
 	</style>
 </head>
 <body>
@@ -74,7 +77,7 @@
 			Set up your post's time-to-live in hours (up to 24 hours) so you know when you would like to keep the post alive.
 		</header>
 	</section>
-	<section class="scene three">
+	<section class="scene four">
 		<header>
 			<h1>
 				Connect with your neighbors
@@ -83,12 +86,12 @@
 			Much Love. Such Community. Very Happy.
 		</header>
 	</section>
-	<section class="scene four">
+	<section class="scene five">
 		<header>
 			<h1>
 				Connect now
 			</h1>
-			<a href="">Click here to sign up for a membership</a>.
+			<a href="d/users/sign_up" style="color: #FFF; text-decoration: underline">Click here to sign up for a membership</a>.
 		</header>
 	</section>
 </body>
